# SnowOS

./: .gitignore  .gitmodules  Add clarification to build instructions  LICENSE  README.md  ROADMAP.md  image.sh  iso.sh  meson.build  x86_64-pe.cross-file
common/: get-deps
yuki/: CMakeLists.txt  get-deps  kernel.cpp  kernel_api.cpp  limine.conf  linker.ld  meson.build  requests.hpp  tinyubsan.cpp
yuki/inc/io/: kprintf.hpp  logo.hpp  terminal.hpp
yuki/inc/klibc/: string.hpp
yuki/inc/mm/: paging.hpp  slab.hpp  vmm.hpp
yuki/inc/sched/: scheduler.hpp
yuki/inc/sys/: apic.hpp  cpuid.hpp  gdt.hpp  hpet.hpp  idt.hpp  lapic.hpp  panic.hpp  smp.hpp  spinlock.hpp  tss.hpp
yuki/inc/utils/: helpers.hpp  mmio.hpp
yuki/include/hal/: hal.hpp
yuki/include/ke/: nanoprintf.hpp  print.hpp  string.hpp
yuki/io/: kprintf.cpp  serial.cpp  terminal.cpp
yuki/klibc/: string.cpp
yuki/mm/: paging.cpp  pmm.cpp  slab.cpp  vmm.cpp
yuki/sched/: scheduler.cpp  switch.asm
yuki/source/hal/: gdt.asm  hal.cpp  isr.asm
yuki/source/ke/: interrupts.cpp  kernel.cpp  print.cpp  string.cpp
yuki/sys/: apic.cpp  cpuid.cpp  gdt.cpp  hpet.cpp  idt.cpp  interrupts.cpp  isr.asm  lapic.cpp  smp.cpp  spinlock.cpp  tss.asm  tss.cpp
yuki/utils/: helpers.cpp  mmio.cpp
